[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/tile_map.png" type="Texture" id=1]
[ext_resource path="res://scripts/heart.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/loose_live_angel.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sounds/loose_live_devil.ogg" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11, 11.5 )

[node name="heart_angel" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 32, 32, 32 )

[node name="angelLostLife" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 8.0

[node name="devilLostLife" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 8.0

[connection signal="body_entered" from="." to="." method="_on_heart_body_entered"]
